k8s/todo-spring-boot_k8s.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-spring-boot
  labels:
    name: todo-spring-boot
    instance: todo-spring-boot-BRANCH_NAME
    version: "1.0.0"
    component: microservice
    part-of: analitico
    managed-by: helm
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: todo-spring-boot
      tier: backend
  template:
    metadata:
      labels:
        app: todo-spring-boot
        tier: backend
        environment: development
        release: unstable
        language: java
    spec:
      containers:
      - name: todo-spring-boot
        image: todo-spring-boot:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: todo-spring-boot
  labels:
    app: todo-spring-boot
    tier: backend
spec:
  ports:
    - name: todo-spring-boot
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: todo-spring-boot
    tier: backend
